Issue #2948911 by jrockowitz, cilefen: Results row operations dropbutton hides behind next row if the dropbutton is moved away from the rightmost column

--- a/css/webform.admin.css
+++ b/css/webform.admin.css
@@ -57,8 +57,8 @@
   text-overflow: ellipsis;
 }
 
-/* Make sure 'Operations' is never cut-off */
-.webform-results__table td:last-child {
+/* Make sure 'Operations' is never cut-off. */
+.webform-results__table td.webform-dropbutton-wrapper {
   overflow: visible;
   max-width: inherit;
   white-space: normal;
